# CleanSARIF

./: .gitignore  CMakeLists.txt  PackageDescription.txt  README.md  version.h.in
src/: CMakeLists.txt  CleanSARIF.cpp  CleanSARIF.h  CleanSARIF.qrc  Cleaner.cpp  Cleaner.h  LoadingSARIF.cpp  LoadingSARIF.h  LoadingSARIF.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewFileFilter.cpp  NewFileFilter.h  NewFileFilter.ui  NewRuleSuppression.cpp  NewRuleSuppression.h  NewRuleSuppression.ui  SARIF.cpp  SARIF.h
src/tests/: CMakeLists.txt  NotJSON.sarif  NotSARIF.sarif  PVS-freecad-23754_210125.sarif  SeveralRules.sarif  SmallValidA.sarif  SmallValidAPlusWhitespace.sarif  SmallValidB.sarif  TestCleaner.cpp  TestSARIF.cpp  cpp.hint
